working account creation/login/home creation/home deletion
